# chainblocks-deps

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Reference.cmake  body.md  checkout.sh
.github/: main.yml
.github/actions/create-deps-release/: action.yml
.github/workflows/: main.yml
Patches/: SDL2.patch  bgfx.cmake.patch  bgfx.patch  boost-context.patch  brotli.patch  cpp-taskflow.patch  wasm3.patch
cmake/: Platform.cmake
scripts/emscripten/: build
scripts/ios/: build
scripts/ios-simulator/: build
scripts/macos/: build
scripts/ubuntu/: build
scripts/ubuntu-valgrind/: build
scripts/windows/: build
